@@ -22,6 +22,7 @@ import org.apache.hadoop.hive.ql.exec.UDAF;
 import org.apache.hadoop.hive.ql.exec.UDAFEvaluator;
 import org.apache.hadoop.hive.serde2.io.DoubleWritable;
 import org.apache.hadoop.hive.serde2.io.ShortWritable;
+import org.apache.hadoop.hive.shims.ShimLoader;
 import org.apache.hadoop.io.FloatWritable;
 import org.apache.hadoop.io.IntWritable;
 import org.apache.hadoop.io.LongWritable;
@@ -245,7 +246,7 @@ public class UDAFMax extends UDAF {
         if (mEmpty) {
           mMax = new Text(o);
           mEmpty = false;
-        } else if (mMax.compareTo(o) < 0) {
+        } else if (ShimLoader.getHadoopShims().compareText(mMax, o) < 0) {
           mMax.set(o);
         }
       }
